--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
 </head>
 <body>
 
-    <!-- HEADER -->
-    <header class="header">
-        <div class="container header-inner">
-            <div class="logo">EPH Technologies</div>
+<!-- HEADER -->
+<header class="header">
+    <div class="container header-inner">
+        <div class="logo">EPH Technologies</div>
 
-            <nav class="nav">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#contact">Contact</a>
-    <a href="#" class="shop-btn">Tech Shop</a>
-</nav>
-        </div>
-    </header>
+        <!-- MOBILE MENU BUTTON (hidden on desktop via CSS) -->
+        <button class="menu-toggle" aria-label="Toggle menu">☰</button>
 
-    <!-- HERO -->
-   <!-- HERO -->
+        <nav class="nav">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#portfolio">Portfolio</a>
+            <a href="#contact">Contact</a>
+            <a href="#" class="shop-btn">Tech Shop</a>
+        </nav>
+    </div>
+</header>
+
+<!-- HERO -->
 <section class="hero" id="home">
     <div class="container hero-inner">
         <h1>Your technology backbone — done right.</h1>
@@ -78,7 +80,9 @@
         </div>
     </div>
 </section>
+
 <div class="about-break"></div>
+
 <!-- ABOUT -->
 <section class="about" id="about">
     <div class="container about-inner">
@@ -103,6 +107,7 @@
 
     </div>
 </section>
+
 <!-- PORTFOLIO -->
 <section class="portfolio" id="portfolio">
     <div class="container">
@@ -144,6 +149,7 @@
 
     </div>
 </section>
+
 <!-- CONTACT -->
 <section class="contact" id="contact">
     <div class="container contact-inner">
@@ -178,7 +184,15 @@
     </div>
 </section>
 
+<!-- MOBILE MENU SCRIPT (does NOTHING on desktop) -->
+<script>
+    const menuToggle = document.querySelector('.menu-toggle');
+    const nav = document.querySelector('.nav');
 
+    menuToggle.addEventListener('click', () => {
+        nav.classList.toggle('active');
+    });
+</script>
 
 </body>
 </html>
